<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/whitegrey"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/logout"
        android:textSize="30sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

</LinearLayout>