<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.finalprojectandroid.model.User" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_sm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/name"
                android:textColorHint="@color/grey"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="@={user.username}"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/pass"
                android:textColorHint="@color/grey"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@={user.password}"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/grey"
                android:background="@drawable/button_border"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</layout>