<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="todo"
            type="com.example.finalprojectandroid.model.Todo" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TodoFormActivity"
            android:background="@color/whitegrey"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:paddingRight="30dp"
            android:paddingEnd="30dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/titleForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_todo"
                android:textColor="@color/black"
                android:textSize="45sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/your_todo_will_be_visible_to_others"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:hint="@string/title"
                android:textColorHint="@color/grey"
                android:layout_marginTop="60dp"
                android:textColor="@color/black"
                android:text="@={todo.title}"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="20dp"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/border"
                android:hint="@string/description"
                android:gravity="top"
                android:textColorHint="@color/grey"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="@={todo.desciption}"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/num_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/def_value"
                    android:textColor="@color/grey"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/max_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_num"
                    android:textColor="@color/grey"
                    android:textSize="30sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textSize="30sp"
                android:textColor="@color/red"
                android:layout_marginTop="60dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:padding="20dp"
            android:background="@drawable/circle_button"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_check" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
</layout>