<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.finalprojectandroid.model.User" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeActivity"
            android:background="@color/whitegrey"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="30dp"
                android:paddingBottom="70dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={user.username}"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:textSize="30sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btn_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box"
                android:clickable="true"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_marginTop="-30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_todo"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_todo"
                    android:layout_centerInParent="true"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_todo"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box"
                android:clickable="true"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_todo"
                    android:layout_centerInParent="true"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_searchUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box"
                android:clickable="true"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_people"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_user"
                    android:layout_centerInParent="true"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_people"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box"
                android:clickable="true"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="30dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_face"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:layout_centerInParent="true"
                    android:textColor="@color/darkgrey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_face"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/u00a9_2020_by_mobile_team"/>
        </LinearLayout>

    </RelativeLayout>

</layout>