<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchTodoActivity"
        android:background="@color/whitegrey"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:clickable="true"
                    android:focusable="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="110dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginRight="110dp">

                    <EditText
                        android:id="@+id/et_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:hint="@string/title"
                        android:textColorHint="@color/grey"
                        android:textColor="@color/black"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp"
                        android:paddingRight="20dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <CheckBox
                            android:id="@+id/cb_user"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:checked="false"
                            android:backgroundTint="@color/black"
                            tools:targetApi="lollipop"
                            android:background="?android:attr/listChoiceIndicatorMultiple"
                            android:button="@null"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/by_user"/>

                        <CheckBox
                            android:id="@+id/cb_todo"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:checked="false"
                            android:backgroundTint="@color/black"
                            tools:targetApi="lollipop"
                            android:background="?android:attr/listChoiceIndicatorMultiple"
                            android:button="@null"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/by_todo"/>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_for"
                    android:textColor="@color/grey"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_searched"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/grey"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="20sp"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_searchTodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/empty_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/darkgrey"
            android:text=""/>

    </RelativeLayout>

</layout>